# CUDA-program

./: CMakeLists.txt  main.cu  mul.cu
